--- a/Ironcrunch/src/components/misses/track.pug
+++ b/Ironcrunch/src/components/misses/track.pug
@@ -9,7 +9,7 @@ div.sheet-misses-track
     each index in track
       select(name=`attr_miss-${index}` class="sheet-progress-input sheet-miss-input")
         +progressBox
-    label.sheet-fulfill-vow LEARN 
+    label.sheet-btn LEARN 
       button(
         type="roll"
         class='sheet-hide'
