--- a/Ironcrunch/src/components/motivations/motivations.styl
+++ b/Ironcrunch/src/components/motivations/motivations.styl
@@ -15,6 +15,7 @@ for id in motivations
   width 17em
   border 2px solid #4C4D4F
   margin-bottom 1em
+  border-radius 8px
   p
     font-size 14px
     line-height 16px
@@ -29,7 +30,7 @@ for id in motivations
   font-variant all-small-caps
   font-size 18px
   text-align-last center
-  border-radius 0
+  border-radius 5px
   width inherit
   padding 0
   line-height 23px
