--- a/Ironcrunch/src/components/moves/content/aid-your-ally.pug
+++ b/Ironcrunch/src/components/moves/content/aid-your-ally.pug
@@ -1,5 +1,5 @@
 include ../mixins/container
 
-- var values = { title: 'Aid Your Ally', name: 'AidYourAlly', class: 'aid-your-ally', page: 'page X', radio: 'aid_your_ally', stat: ``, stat_repeat: '' }
-+container(values)
-  p When you Secure an Advantage in direct support of an ally, and score a hit, they (instead of you) can take the benefits of the move.
+mixin AidYourAlly(values)
+  +container(values)
+    p When <strong>you <em>Secure an Advantage</em> in direct support of an ally, and score a hit</strong>, they (instead of you) can take the benefits of the move.
