--- a/Ironcrunch/src/components/moves/content/burn-momentum.pug
+++ b/Ironcrunch/src/components/moves/content/burn-momentum.pug
@@ -1,5 +1,5 @@
 include ../mixins/container
 
-- var values = { title: 'Burn Momentum', name: 'BurnMomentum', class: 'burn-momentum', page: 'page X', radio: 'burn_momentum', stat: ``, stat_repeat: '' }
-+container(values)
-  p When you make a move, and have positive momentum, you may set your momentum to your reset value and cancel any challenge dice that are less than your current momentum value.
+mixin BurnMomentum(values)
+  +container(values)
+    p When <strong>you make a move, and have positive momentum</strong>, you may set your momentum to your reset value and cancel any challenge dice that are less than your current momentum value.
