--- a/Ironcrunch/src/components/moves/content/check-your-gear.pug
+++ b/Ironcrunch/src/components/moves/content/check-your-gear.pug
@@ -1,8 +1,8 @@
 include ../mixins/container
 
-- var values = { title: 'Check Your Gear', name: 'CheckYourGear', class: 'check-your-gear', page: 'page X', radio: 'check_your_gear', stat: ``, stat_repeat: '' }
-+container(values)
-  p When you check to see if you have a specific helpful item, and you have at least +1 supply, roll +supply.
-  p On a strong hit, you have it. Take +2 momentum.
-  p On a weak hit, you have it, but your resources are diminished. Take +2 momentum and suffer -1 supply.
-  p On a miss, you don’t have it and the situation grows more perilous. Pay the Price.
+mixin CheckYourGear(values)
+  +container(values)
+    p When <strong>you check to see if you have a specific helpful item, and you have at least +1 supply</strong>, roll +supply.
+    p On a <strong>strong hit</strong>, you have it. Take +2 momentum.
+    p On a <strong>weak hit</strong>, you have it, but your resources are diminished. Take +2 momentum and suffer -1 supply.
+    p On a <strong>miss</strong>, you don’t have it and the situation grows more perilous. <em>Pay the Price</em>.
