--- a/Ironcrunch/src/components/moves/content/endure-stress.pug
+++ b/Ironcrunch/src/components/moves/content/endure-stress.pug
@@ -1,37 +1,37 @@
 include ../mixins/container
 
-- var values = { title: 'Endure Stress', name: 'EndureStress', class: 'endure-stress', page: 'page X', radio: 'endure_stress', stat: ``, stat_repeat: '', roll: true }
-+container(values)
-  p When you face mental shock or despair, suffer -spirit equal to your foe’s rank or as appropriate to the situation. If your spirit is reduced to 0, suffer -momentum equal to any remaining -spirit.
-  p Then, roll +spirit or +heart, whichever is higher.
-  p On a strong hit, choose one.
-  ul
-    li Shake it off: If your spirit is greater than 0, suffer -1 momentum in exchange for +1 spirit
-    li Embrace the darkness: Take +2 momentum
-  p On a weak hit, you press on.
-  p On a miss, also suffer -1 momentum. If you are at 0 spirit, take the shaken or corrupted condition (if currently not taken) or roll on the following table.
-  .sheet-oracle-table 
-    .oracle-row 
-      span.sheet-oracle-roll 1-10 (10%)
-      span.sheet-oracle-result You are overwhelmed. <em>Face Desolation.</em>
-    .oracle-row 
-      span.sheet-oracle-roll 11-25 (15%)
-      span.sheet-oracle-result You give up. <em>Forsake Your Vow</em> (if possible, one relevant to your current crisis). If this is a companion, <em>Test Their Loyalty</em>.
-    .oracle-row 
-      span.sheet-oracle-roll 26-50 (25%)
-      span.sheet-oracle-result You give in to a fear or compulsion, and act against your better instincts. Manifest Insanity.
-    .oracle-row 
-      span.sheet-oracle-roll 51-80 (30%)
-      span.sheet-oracle-result You persevere.
-    .oracle-row 
-      span.sheet-oracle-roll 81-85 (5%)
-      span.sheet-oracle-result You get a moment of clarity in the eye of the storm. If you have the shaken condition card, discard it. Take +4 spirit and +8 momentum. Then, add +2 to your next move.
-    .oracle-row 
-      span.sheet-oracle-roll 86-90 (5%)
-      span.sheet-oracle-result You get virtuous in the face of chaos. If you have the shaken condition card, discard it. Then, take +4 spirit and draw up to your maximum of resilience cards.
-    .oracle-row 
-      span.sheet-oracle-roll 91-95 (5%)
-      span.sheet-oracle-result Your body harvest vigor. If you have the shaken condition card, discard it. Then, take +4 spirit and +1d12 health.
-    .oracle-row 
-      span.sheet-oracle-roll 96-00 (5%))
-      span.sheet-oracle-result Your spirit shines brightest against a backdrop of desolation. If you have the shaken condition card, discard it. Then, take +8 spirit.
+mixin EndureStress(values)
+  +container(values)
+    p When <strong>you face mental shock or despair</strong>, suffer -spirit equal to your foe’s rank or as appropriate to the situation. If your spirit is reduced to 0, suffer -momentum equal to any remaining -spirit.
+    p Then, roll +spirit or +heart, whichever is higher.
+    p On a <strong>strong hit</strong>, choose one.
+    ul
+      li Shake it off: If your spirit is greater than 0, suffer -1 momentum in exchange for +1 spirit
+      li Embrace the darkness: Take +2 momentum
+    p On a <strong>weak hit</strong>, you press on.
+    p On a <strong>miss</strong>, also suffer -1 momentum. If you are at 0 spirit, take the shaken or corrupted condition (if currently not taken) or roll on the following table.
+    .sheet-oracle-table 
+      .oracle-row 
+        span.sheet-oracle-roll 1-10 (10%)
+        span.sheet-oracle-result You are overwhelmed. <em>Face Desolation.</em>
+      .oracle-row 
+        span.sheet-oracle-roll 11-25 (15%)
+        span.sheet-oracle-result You give up. <em>Forsake Your Vow</em> (if possible, one relevant to your current crisis). If this is a companion, <em>Test Their Loyalty</em>.
+      .oracle-row 
+        span.sheet-oracle-roll 26-50 (25%)
+        span.sheet-oracle-result You give in to a fear or compulsion, and act against your better instincts. Manifest Insanity.
+      .oracle-row 
+        span.sheet-oracle-roll 51-80 (30%)
+        span.sheet-oracle-result You persevere.
+      .oracle-row 
+        span.sheet-oracle-roll 81-85 (5%)
+        span.sheet-oracle-result You get a moment of clarity in the eye of the storm. If you have the shaken condition card, discard it. Take +4 spirit and +8 momentum. Then, add +2 to your next move.
+      .oracle-row 
+        span.sheet-oracle-roll 86-90 (5%)
+        span.sheet-oracle-result You get virtuous in the face of chaos. If you have the shaken condition card, discard it. Then, take +4 spirit and draw up to your maximum of resilience cards.
+      .oracle-row 
+        span.sheet-oracle-roll 91-95 (5%)
+        span.sheet-oracle-result Your body harvest vigor. If you have the shaken condition card, discard it. Then, take +4 spirit and +1d12 health.
+      .oracle-row 
+        span.sheet-oracle-roll 96-00 (5%))
+        span.sheet-oracle-result Your spirit shines brightest against a backdrop of desolation. If you have the shaken condition card, discard it. Then, take +8 spirit.
