--- a/Ironcrunch/src/components/moves/content/enter-the-fray.pug
+++ b/Ironcrunch/src/components/moves/content/enter-the-fray.pug
@@ -1,17 +1,17 @@
 include ../mixins/container
 
-- var values = { title: 'Enter the Fray', name: 'EnterTheFray', class: 'enter-the-fray', page: 'page X', radio: 'enter_the_fray', stat: ``, stat_repeat: '', roll: true }
-+container(values)
-  p When you enter in combat, determine who is in control. If you are...
-  ul
-    li Reacting: Roll +edge.
-    li Facing off: Roll +heart.
-    li Charging: Roll +iron.
-    li Ambushing: Roll +shadow.
-    li Ambushed: Roll +wits.
-  p On a strong hit, take +4 momentum. You have initiative.
-  p On a weak hit, choose one.
-  ul
-    li Bolster your position: Take +4 momentum. Your foe has initiative.
-    li Prepare to act: Take initiative.
-  p On a miss, combat begins with you at a disadvantage. Pay the Price. Your foe has initiative.
+mixin EnterTheFray(values)
+  +container(values)
+    p When <strong>you enter in combat</strong>, determine who is in control. If you are...
+    ul
+      li Reacting: Roll +edge.
+      li Facing off: Roll +heart.
+      li Charging: Roll +iron.
+      li Ambushing: Roll +shadow.
+      li Ambushed: Roll +wits.
+    p On a <strong>strong hit</strong>, take +4 momentum. You have initiative.
+    p On a <strong>weak hit</strong>, choose one.
+    ul
+      li Bolster your position: Take +4 momentum. Your foe has initiative.
+      li Prepare to act: Take initiative.
+    p On a <strong>miss</strong>, combat begins with you at a disadvantage. <em>Pay the Price</em>. Your foe has initiative.
