--- a/Ironcrunch/src/components/moves/content/manifest-insanity.pug
+++ b/Ironcrunch/src/components/moves/content/manifest-insanity.pug
@@ -1,8 +1,8 @@
 include ../mixins/container
 
-- var values = { title: 'Manifest Insanity', name: 'ManifestInsanity', class: 'manifest-insanity', page: 'page X', radio: 'manifest_insanity', stat: ``, stat_repeat: '', roll: true, oracle: true }
-+container(values)
-  p When <strong>you fail to struggle against a mental shock</strong>, make the most obvious negative outcome happen from the following tables, or roll on them to determine what kind of insanity you manifest (1-70=short-term insanity, 71-00=long-term insanity).
+mixin ManifestInsanity(values)
+  +container(values)
+    p When <strong>you fail to struggle against a mental shock</strong>, make the most obvious negative outcome happen from the following tables, or roll on them to determine what kind of insanity you manifest (1-70=short-term insanity, 71-00=long-term insanity).
 //- Short-term Insanity
 //- Roll
 //- Result
