--- a/Ironcrunch/src/components/moves/content/out-of-supply.pug
+++ b/Ironcrunch/src/components/moves/content/out-of-supply.pug
@@ -1,5 +1,5 @@
 include ../mixins/container
 
-- var values = { title: 'Out of Supply', name: 'OutOfSupply', class: 'out-of-supply', page: 'page X', radio: 'out_of_supply', stat: ``, stat_repeat: '' }
-+container(values)
-  p When <strong>your supply is exhausted (reduced to 0)</strong>, take the unprepared condition. If you suffer additional -supply while unprepared, you must exchange each additional -supply for any combination of -health, -spirit, -wealth, -companion’s loyalty or -momentum as appropriate to the circumstances.
+mixin OutOfSupply(values)
+  +container(values)
+    p When <strong>your supply is exhausted (reduced to 0)</strong>, take the unprepared condition. If you suffer additional -supply while unprepared, you must exchange each additional -supply for any combination of -health, -spirit, -wealth, -companion’s loyalty or -momentum as appropriate to the circumstances.
