--- a/Ironcrunch/src/components/moves/mixins/container.pug
+++ b/Ironcrunch/src/components/moves/mixins/container.pug
@@ -14,7 +14,7 @@ mixin container(opts)
               title=opts.title
               name=`roll${opts.name}`
               class='sheet-hide'
-              value=`&{template:ironcrunch_progress} {{header=@{character_name}}} {{progressname=${opts.title}}} {{progress=[[?{Filled Progress|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}`
+              value=`&{template:ironcrunch_progress} {{header=@{character_name}}} {{progress_name=${opts.title}}} {{progress=[[?{Filled Progress|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}`
             )
         else if opts.oracle
           label.sheet-roll-label Roll Oracle
@@ -23,7 +23,7 @@ mixin container(opts)
               title=opts.title
               name=`roll${opts.name}`
               class='sheet-hide'
-              value=`&{template:ironcrunch_progress} {{header=@{character_name}}} {{progressname=${opts.title}}} {{progress=[[?{Filled Progress|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}`
+              value=`&{template:ironcrunch_progress} {{header=@{character_name}}} {{progress_name=${opts.title}}} {{progress=[[?{Filled Progress|0}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}`
             )
         else
           label.sheet-roll-label Roll
