--- a/Ironcrunch/src/components/moves/moves.styl
+++ b/Ironcrunch/src/components/moves/moves.styl
@@ -64,7 +64,7 @@ input.sheet-search-bar
 
 .sheet-move-highlight:checked ~ .sheet-move-name
   background #ffdd00
-  outline-offset 0s
+  outline-offset 0
   box-shadow inset 0 0 0 2px
 
 .sheet-move-list
@@ -153,9 +153,8 @@ span.sheet-move-result
   flex-flow: column wrap
   width: 22.5em
 
-.sheet-move-table
-  border: 2px solid #414042
-  width: 45em
+.sheet-move-delve-table
+  width auto !important
 
 .sheet-move-list:nth-child(2n+1)
   background-color: #ddd
@@ -164,6 +163,8 @@ span.sheet-move-result
   font-family 'Crimson Text', Verdana, arial, sans-serif
   padding: 1em
   border: 2px solid #414042
+  p
+    margin-bottom 0.3em
 
 .sheet-move-container
   display: flex
@@ -310,18 +311,23 @@ input[type=radio].sheet-conditional-companion-acts:checked ~ div.sheet-condition
 
 input.sheet-danger-situation:checked ~ div.sheet-danger-situation,
 input.sheet-danger-road:checked ~ div.sheet-danger-road,
-input.sheet-danger-character:checked ~ div.sheet-danger-character 
+input.sheet-danger-character:checked ~ div.sheet-danger-character,
+input.sheet-opportunity-item:checked ~ div.sheet-opportunity-item,
+input.sheet-opportunity-character:checked ~ div.sheet-opportunity-character,
+input.sheet-opportunity-area:checked ~ div.sheet-opportunity-area
   opacity 1
   height auto
 
 .sheet-move-nav-child
   display flex
-  width fit-content
+  width auto
   height 1.3em
   padding 0
+  margin 0.2em 0em 0.2em 0em
 
 div.sheet-move-nav-content
   padding 0.2em
+  width 100%
 
 input.sheet-table-btn:checked ~ div.sheet-move-nav-content
   background #4C4D4F
@@ -336,3 +342,36 @@ input.sheet-table-btn:checked ~ div.sheet-move-nav-content
   border-radius 4px
   background-color rgba(0, 0, 0, .5);
   box-shadow 0 0 1px rgba(255, 255, 255, .5)
+
+.sheet-move-delve-column-stat-header,
+.sheet-move-delve-stat-column
+  width:16%
+
+.sheet-move-delve-column-stat-header-1,
+.sheet-move-delve-stat-column-1
+  width:17%
+
+.sheet-move-delve-column-stat-header-2,
+.sheet-move-delve-stat-column-2
+  width:18%
+
+.sheet-move-delve-column-stat-header-3,
+.sheet-move-delve-stat-column-3
+  width:15%
+
+.sheet-move-delve-column-header,
+.sheet-move-delve-column
+  width:50%
+
+.sheet-move-delve-column-stat-header,
+.sheet-move-delve-column-stat-header-1,
+.sheet-move-delve-column-stat-header-2,
+.sheet-move-delve-column-stat-header-3,
+.sheet-move-delve-column-header
+  font-weight: bold;
+
+.sheet-move-delve-row-header
+  padding: 0px 5px 0px 5px;
+  display: flex;
+  height: auto;
+  border-bottom: 2px solid #4C4D4F;
