--- a/Ironcrunch/src/components/progress/progress.styl
+++ b/Ironcrunch/src/components/progress/progress.styl
@@ -40,7 +40,7 @@ input.sheet-progress-name
     transition .5s ease
   &:focus
     outline 3px solid #ffdd00
-    outline-offset 0s
+    outline-offset 0
     box-shadow inset 0 0 0 2px
 
 // Ticks
