--- a/Ironcrunch/src/components/stats/stats.styl
+++ b/Ironcrunch/src/components/stats/stats.styl
@@ -28,7 +28,7 @@ input.sheet-stats-input
   background:#e6e7e8
   &:focus
     outline 3px solid #ffdd00
-    outline-offset 0s
+    outline-offset 0
     box-shadow inset 0 0 0 2px
 
 label.sheet-roll-label
