--- a/Ironcrunch/src/components/vows/vows.pug
+++ b/Ironcrunch/src/components/vows/vows.pug
@@ -1,5 +1,5 @@
 - var track = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
-- var difficulties = { 1:{ text: 'Troublesome', checked: true }, 2:{ text: 'Dangerous' }, 3:{ text: 'Formidable' }, 4:{ text: 'Extreme'}, 5:{ text: 'Epic' }}
+include ../difficulties/array
 
 mixin progressBox
   option(value="0" selected)
