--- a/Ironcrunch/src/pages/character/index.pug
+++ b/Ironcrunch/src/pages/character/index.pug
@@ -17,8 +17,8 @@ include ./effort
 include ./moves
 include ./progress
 include ./oracles
+include ./sites
 include ./settings
-
 
 //- Footer
 include ../../components/momentum/momentum
