--- a/Ironcrunch/src/components/details/details.styl
+++ b/Ironcrunch/src/components/details/details.styl
@@ -1,7 +1,7 @@
 .sheet-pc-name
   &:focus
     outline 3px solid #ffdd00
-    outline-offset 0s
+    outline-offset 0
     box-shadow inset 0 0 0 2px
 
 .sheet-details-row
