--- a/Ironcrunch/src/components/moves/content/compel.pug
+++ b/Ironcrunch/src/components/moves/content/compel.pug
@@ -1,13 +1,13 @@
 include ../mixins/container
 
-- var values = { title: 'Compel', name: 'Compel', class: 'compel', page: 'page X', radio: 'compel', stat: ``, stat_repeat: '', roll: true }
-+container(values)
-  p When you persuade someone to do something, envision your approach and roll. If you...
-  ul
-    li Charm, pacify, barter, or convince: Roll +heart (add +2 if you share a bond).
-    li Threaten or incite: Roll +iron.
-    li Lie or swindle: Roll +shadow.
-    li Flaunting or boasting: Roll +wealth or +supply.
-  p On a strong hit, they’ll do what you want or share what they know. Take +2 momentum. If you use this exchange to Gather Information, make that move now and add +2.
-  p On a weak hit, as above, but they ask something of you in return; envision what they want. If you are making this move to persuade a conditional companion, suffer -1 loyalty instead.
-  p On a miss, they refuse or make a demand which costs you greatly. Pay the Price; if you are making this move by interacting with a conditional companion, suffer -1 loyalty instead.
+mixin Compel(values)
+  +container(values)
+    p When <strong>you persuade someone to do something</strong>, envision your approach and roll. If you...
+    ul
+      li Charm, pacify, barter, or convince: Roll +heart (add +2 if you share a bond).
+      li Threaten or incite: Roll +iron.
+      li Lie or swindle: Roll +shadow.
+      li Flaunting or boasting: Roll +wealth or +supply.
+    p On a <strong>strong hit</strong>, they’ll do what you want or share what they know. Take +2 momentum. If you use this exchange to <em>Gather Information</em>, make that move now and add +2.
+    p On a <strong>weak hit</strong>, as above, but they ask something of you in return; envision what they want. If you are making this move to persuade a conditional companion, suffer -1 loyalty instead.
+    p On a <strong>miss</strong>, they refuse or make a demand which costs you greatly. <em>Pay the Price</em>; if you are making this move by interacting with a conditional companion, suffer -1 loyalty instead.
