--- a/Ironcrunch/src/components/moves/content/conditional-companion-abandons.pug
+++ b/Ironcrunch/src/components/moves/content/conditional-companion-abandons.pug
@@ -1,5 +1,5 @@
 include ../mixins/container
 
-- var values = { title: 'Conditional Companion Abandons', name: 'ConditionalCompanionAbandons', class: 'conditional-companion-abandons', page: 'page X', radio: 'conditional_companion_abandons', stat: ``, stat_repeat: '' }
-+container(values)
-  p When your conditional companion has fulfilled their goal or is no longer willing to follow you, they will leave you at the next opportunity.
+mixin ConditionalCompanionAbandons(values)
+  +container(values)
+    p When <strong>your conditional companion has fulfilled their goal or is no longer willing to follow you</strong>, they will leave you at the next opportunity.
