--- a/Ironcrunch/src/components/moves/content/conditional-companion-acts.pug
+++ b/Ironcrunch/src/components/moves/content/conditional-companion-acts.pug
@@ -1,5 +1,5 @@
 include ../mixins/container
 
-- var values = { title: 'Conditional Companion Acts', name: 'ConditionalCompanionActs', class: 'conditional-companion-acts', page: 'page X', radio: 'conditional_companion_acts', stat: ``, stat_repeat: '' }
-+container(values)
-  p When a conditional companion is in position to make a move according to their drives, motivations or the fulfillment of their goal, they do so without suffering -loyalty. Make the move by rolling +their stat.
+mixin ConditionalCompanionActs(values)
+  +container(values)
+    p When <strong>a conditional companion is in position to make a move according to their drives, motivations or the fulfillment of their goal</strong>, they do so without suffering -loyalty. Make the move by rolling +their stat.
