--- a/Ironcrunch/src/components/moves/content/face-death.pug
+++ b/Ironcrunch/src/components/moves/content/face-death.pug
@@ -1,11 +1,13 @@
 include ../mixins/container
 
-- var values = { title: 'Face Death', name: 'FaceDeath', class: 'face-death', page: 'page X', radio: 'face_death', stat: ``, stat_repeat: '', roll: true }
-+container(values)
-  p When you are brought to the brink of death, roll +heart.
-  p On a strong hit, death rejects you.
-  p On a weak hit, choose one.
-  ul
-    li You die, but not before making a noble sacrifice. Envision your final moments.
-    li Death desires something of you in exchange for your life. Envision what it wants, and Swear an Iron Vow (formidable or extreme) to complete that quest. If you fail to score a hit when you Swear an Iron Vow, or refuse the quest, you are dead. Otherwise, you return to the mortal world and are now cursed. You may only clear the cursed condition by completing the quest.
-  p On a miss, you are dead.
+mixin FaceDeath(values)
+  +container(values)
+    p When <strong>you are brought to the brink of death</strong>, roll +heart.
+    p On a <strong>strong hit</strong>, death rejects you.
+    p On a <strong>weak hit</strong>, choose one.
+    ul
+      li You die, but not before making a noble sacrifice. Envision your final moments.
+      li Death desires something of you in exchange for your life. Envision what it wants, and <em>Swear an Iron Vow</em> (formidable or extreme) to complete that quest. If you fail to score a hit when you <em>Swear an Iron Vow</em>, or refuse the quest, you are dead. Otherwise, you return to the mortal world and are now cursed. You may only clear the cursed condition by completing the quest.
+    p On a <strong>miss</strong>, you are dead.
+
+//- TODO: {{owl=[[?{Owl Companion|No&#44;0|Yes&#44;?{Owl's Health&amp;#124;0&amp;#125;&#125;]]}}
