--- a/Ironcrunch/src/components/moves/content/foe-inflicts-harm.pug
+++ b/Ironcrunch/src/components/moves/content/foe-inflicts-harm.pug
@@ -1,5 +1,5 @@
 include ../mixins/container
 
-- var values = { title: 'Foe Inflicts Harm', name: 'FoeInflictsHarm', class: 'foe-inflicts-harm', page: 'page X', radio: 'foe_inflicts_harm', stat: ``, stat_repeat: '' }
-+container(values)
-  p When you face harm from a foe, roll their combat move harm and Endure Harm with the resulting score.
+mixin FoeInflictsHarm(values)
+  +container(values)
+    p When <strong>you face harm from a foe</strong>, roll their combat move harm and <em>Endure Harm</em> with the resulting score.
