--- a/Ironcrunch/src/components/moves/content/forge-a-bond.pug
+++ b/Ironcrunch/src/components/moves/content/forge-a-bond.pug
@@ -1,11 +1,11 @@
 include ../mixins/container
 
-- var values = { title: 'Forge a Bond', name: 'ForgeABond', class: 'forge-a-bond', page: 'page X', radio: 'forge_a_bond', stat: ``, stat_repeat: '', roll: true }
-+container(values)
-  p When you spend significant time with a person or community, stand together to face hardships, or make sacrifices for their cause, you can attempt to create a bond. When you do, roll +heart. If you make this move after you successfully Fulfill Your Vow to their benefit, you may reroll any dice.
-  p On a strong hit, make note of the bond, mark a tick on your bond progress track, and choose one.
-  ul
-    li Take +2 spirit.
-    li Take +4 momentum.
-  p On a weak hit, they ask something more of you first. Envision what it is, do it (or Swear an Iron Vow), and mark the bond. If you refuse or fail, Pay the Price.
-  p On a miss, they reject you. Pay the Price.
+mixin ForgeABond(values)
+  +container(values)
+    p When <strong>you spend significant time with a person or community, stand together to face hardships, or make sacrifices for their cause</strong>, you can attempt to create a bond. When you do, roll +heart. If you make this move after you successfully <em>Fulfill Your Vow</em> to their benefit, you may reroll any dice.
+    p On a <strong>strong hit</strong>, make note of the bond, mark a tick on your bond progress track, and choose one.
+    ul
+      li Take +2 spirit.
+      li Take +4 momentum.
+    p On a <strong>weak hit</strong>, they ask something more of you first. Envision what it is, do it (or <em>Swear an Iron Vow</em>), and mark the bond. If you refuse or fail, <em>Pay the Price</em>.
+    p On a <strong>miss</strong>, they reject you. <em>Pay the Price</em>.
