--- a/Ironcrunch/src/components/moves/content/inflict-harm.pug
+++ b/Ironcrunch/src/components/moves/content/inflict-harm.pug
@@ -1,5 +1,5 @@
 include ../mixins/container
 
-- var values = { title: 'Inflict Harm', name: 'Inflict Harm', class: 'inflict-harm', page: 'page X', radio: 'inflict_harm', stat: ``, stat_repeat: '' }
-+container(values)
-  p When you deal physical damage, roll your weapon’s harm. If you are hitting your foe’s protection and not breaking their defense rating, subtract your foe’s protection from each roll. Your foe suffers -health with the resulting score.
+mixin InflictHarm(values)
+  +container(values)
+    p When <strong>you deal physical damage</strong>, roll your weapon’s harm. If you are hitting your foe’s protection and not breaking their defense rating, subtract your foe’s protection from each roll. Your foe suffers -health with the resulting score.
