--- a/Ironcrunch/src/components/moves/content/locate-your-objective.pug
+++ b/Ironcrunch/src/components/moves/content/locate-your-objective.pug
@@ -1,10 +1,11 @@
 include ../mixins/container
 
-- var values = { title: 'Locate Your Objective', name: 'LocateYourObjective', class: 'locate-your-objective', page: 'page X', radio: 'locate_your_objective', stat: ``, stat_repeat: '', roll: true, progress: true }
-+container(values)
-  p When your exploration of a site comes to an end, roll the challenge dice and compare to your progress.
-  ul
-    li Make another move now (not a progress move), and add +2.
-    li Take +2 momentum.
-  p On a weak hit, you locate your objective but face an unforeseen hazard or complication. Envision what you find.
-  p On a miss, your objective falls out of reach, you have been misled about the nature of your objective, or you discover that this site holds unexpected depths. If you continue your exploration, clear all but one filled progress and raise the site’s rank by one (if not already epic).
+mixin LocateYourObjective(values)
+  +container(values)
+    p When <strong>your exploration of a site comes to an end</strong>, roll the challenge dice and compare to your progress.
+    p On a <strong>strong hit</strong>, you locate your objective and the situation favors you. Choose one.
+    ul
+      li Make another move now (not a progress move), and add +2.
+      li Take +2 momentum.
+    p On a <strong>weak hit</strong>, you locate your objective but face an unforeseen hazard or complication. Envision what you find.
+    p On a <strong>miss</strong>, your objective falls out of reach, you have been misled about the nature of your objective, or you discover that this site holds unexpected depths. If you continue your exploration, clear all but one filled progress and raise the site’s rank by one (if not already epic).
