--- a/Ironcrunch/src/components/moves/content/not-assist-conditional-companion.pug
+++ b/Ironcrunch/src/components/moves/content/not-assist-conditional-companion.pug
@@ -1,5 +1,5 @@
 include ../mixins/container
 
-- var values = { title: 'Not Assist Conditional Companion', name: 'NotAssistConditionalCompanion', class: 'not-assist-conditional-companion', page: 'page X', radio: 'not_assist_conditional_companion', stat: ``, stat_repeat: '' }
-+container(values)
-  p When a conditional companion suffers the consequence of one of your moves and you don’t come to their aid, suffer -1 to their loyalty.
+mixin NotAssistConditionalCompanion(values)
+  +container(values)
+    p When <strong>a conditional companion suffers the consequence of one of your moves and you don’t come to their aid</strong>, suffer -1 to their loyalty.
