--- a/Ironcrunch/src/components/moves/content/patch-equipment.pug
+++ b/Ironcrunch/src/components/moves/content/patch-equipment.pug
@@ -1,8 +1,6 @@
-extends ../moves
 include ../mixins/container
 
-append movePreview
-  - var values = { title: 'Patch Equipment', name: 'PatchEquipment', class: 'patch-equipment', page: 'page X', radio: 'patch_equipment', stat: ``, stat_repeat: '', roll: true }
+mixin PatchEquipment(values)
   +container(values)
     p When <strong>you attempt to amend an armor or shield</strong>, envision how provisions from your gear help you patch the piece of equipment and suffer -2 supply. Then, roll +wits.
     p On a <strong>strong hit</strong>, your amendment is efficient. Choose one.
