--- a/Ironcrunch/src/components/moves/content/take-a-downtime.pug
+++ b/Ironcrunch/src/components/moves/content/take-a-downtime.pug
@@ -1,10 +1,10 @@
 include ../mixins/container
 
-- var values = { title: 'Take a Downtime', name: 'TakeADowntime', class: 'take-a-downtime', page: 'page X', radio: 'take_a_downtime', stat: ``, stat_repeat: '' }
-+container(values)
-  p When <strong>you spend weeks or months recuperating in a safe place and have at least 1 experience</strong>, suffer -1 experience in exchange of the following.
-  ul
-    li Clear your conditions (not corrupted nor maimed).
-    li Set your tracks to their maximum.
-    li Reset your momentum.
-    li Take +2d4+2 wealth.
+mixin TakeADowntime(values)
+  +container(values)
+    p When <strong>you spend weeks or months recuperating in a safe place and have at least 1 experience</strong>, suffer -1 experience in exchange of the following.
+    ul
+      li Clear your conditions (not corrupted nor maimed).
+      li Set your tracks to their maximum.
+      li Reset your momentum.
+      li Take +2d4+2 wealth.
