--- a/Ironcrunch/src/components/moves/content/take-on-overload.pug
+++ b/Ironcrunch/src/components/moves/content/take-on-overload.pug
@@ -1,5 +1,5 @@
 include ../mixins/container
 
-- var values = { title: 'Take on Overload', name: 'TakeOnOverload', class: 'take-on-overload', page: 'page X', radio: 'take_on_overload', stat: ``, stat_repeat: '' }
-+container(values)
-  p When <strong>you have more weight than your maximum load</strong>, take the encumbered condition.
+mixin TakeOnOverload(values)
+  +container(values)
+    p When <strong>you have more weight than your maximum load</strong>, take the encumbered condition.
