--- a/Ironcrunch/src/components/moves/content/turn-the-tide.pug
+++ b/Ironcrunch/src/components/moves/content/turn-the-tide.pug
@@ -1,6 +1,6 @@
 include ../mixins/container
 
-- var values = { title: 'Turn the Tide', name: 'TurnTheTide', class: 'turn-the-tide', page: 'page X', radio: 'turn_the_tide', stat: ``, stat_repeat: '' }
-+container(values)
-  p Once per fight, when you risk it all, you may steal initiative from your foe to make a move (not a progress move). When you do, add +2 and take +2 momentum on a hit.
-  p If you fail to score a hit on that move, you must suffer a dire outcome. <em>Pay the Price</em>.
+mixin TurnTheTide(values)
+  +container(values)
+    p Once per fight, when <strong>you risk it all</strong>, you may steal initiative from your foe to make a move (not a progress move). When you do, add +2 and take +2 momentum on a hit.
+    p If you fail to score a hit on that move, you must suffer a dire outcome. <em>Pay the Price</em>.
