--- a/Ironcrunch/src/components/moves/content/write-your-epilogue.pug
+++ b/Ironcrunch/src/components/moves/content/write-your-epilogue.pug
@@ -1,9 +1,9 @@
 include ../mixins/container
 
-- var values = { title: 'Write Your Epilogue', name: 'WriteYourEpilogue', class: 'write-your-epilogue', page: 'page X', radio: 'write_your_epilogue', stat: ``, stat_repeat: '', roll: tru, progress: true }
-+container(values)
-  p <strong><em>Progress Move</em></strong>
-  p When <strong>you retire from your life as an Oathkeeper</strong>, envision two things: What you hope for, and what you fear. Then, roll the challenge dice and compare to your bonds.
-  p On a <strong>strong hit</strong>, things come to pass as you hoped.
-  p On a <strong>weak hit</strong>, your life takes an unexpected turn, but not necessarily for the worse. You find yourself spending your days with someone or in a place you did not foresee. Envision it.
-  p On a <strong>miss</strong>, your fears are realized.
+mixin WriteYourEpilogue(values)
+  +container(values)
+    p <strong><em>Progress Move</em></strong>
+    p When <strong>you retire from your life as an Oathkeeper</strong>, envision two things: What you hope for, and what you fear. Then, roll the challenge dice and compare to your bonds.
+    p On a <strong>strong hit</strong>, things come to pass as you hoped.
+    p On a <strong>weak hit</strong>, your life takes an unexpected turn, but not necessarily for the worse. You find yourself spending your days with someone or in a place you did not foresee. Envision it.
+    p On a <strong>miss</strong>, your fears are realized.
