--- a/Ironcrunch/src/components/nav/character.pug
+++ b/Ironcrunch/src/components/nav/character.pug
@@ -7,17 +7,18 @@
         { id: '3', text: 'Motivations' },
         { id: '4', text: 'Bonds' },
         { id: '11', text: 'Progress' },
-        { id: '6', text: 'Conditions' }
+        { id: '6', text: 'Conditions' },
+        { id: '7', text: 'Equipment' }
       ]
     },
     {
       pages: [
-        { id: '7', text: 'Equipment' },
         { id: '5', text: 'Proficiencies' },
         { id: '8', text: 'Assets' },
         { id: '9', text: 'Effort' },
         { id: '10', text: 'Moves' },
         { id: '12', text: 'Oracles' },
+        { id: '14', text: 'Sites' },
         { id: '13', text: 'Settings' }
       ]
     }
