--- a/Ironcrunch/src/components/vows/vows.styl
+++ b/Ironcrunch/src/components/vows/vows.styl
@@ -6,7 +6,7 @@ input.sheet-vow-name
   margin-top: 1em
   &:focus
     outline 3px solid #ffdd00
-    outline-offset 0s
+    outline-offset 0
     box-shadow inset 0 0 0 2px
 
 .sheet-fulfill-vow:hover,
