--- a/Ironcrunch/src/pages/index.styl
+++ b/Ironcrunch/src/pages/index.styl
@@ -46,3 +46,21 @@ div.sheet-mode
 
 .sheet-mode-image
   display flex
+
+input[type=radio].sheet-bonds:checked ~ div.sheet-bonds,
+input[type=radio].sheet-summary:checked ~ div.sheet-summary,
+input[type=radio].sheet-motivations:checked ~ div.sheet-motivations,
+input[type=radio].sheet-vows:checked ~ div.sheet-vows,
+input[type=radio].sheet-proficiencies:checked ~ div.sheet-proficiencies,
+input[type=radio].sheet-conditions:checked ~ div.sheet-conditions,
+input[type=radio].sheet-equipment:checked ~ div.sheet-equipment,
+input[type=radio].sheet-assets:checked ~ div.sheet-assets,
+input[type=radio].sheet-effort:checked ~ div.sheet-effort,
+input[type=radio].sheet-moves:checked ~ div.sheet-moves,
+input[type=radio].sheet-progress:checked ~ div.sheet-progress,
+input[type=radio].sheet-oracles:checked ~ div.sheet-oracles,
+input[type=radio].sheet-settings:checked ~ div.sheet-settings,
+input[type=radio].sheet-sites:checked ~ div.sheet-sites
+  display block
+  opacity 1
+  height: auto
